src/test/ui/existential_types/different_defining_uses_never_type.stderr
error: concrete type differs from previous defining existential type use
  --> $DIR/different_defining_uses_never_type.rs:12:1
   |
LL | / fn bar() -> Foo {
LL | |     panic!()
LL | | }
   | |_^ expected `&'static str`, got `()`
   |
note: previous use here
  --> $DIR/different_defining_uses_never_type.rs:8:1
   |
LL | / fn foo() -> Foo {
LL | |     ""
LL | | }
   | |_^

error: concrete type differs from previous defining existential type use
  --> $DIR/different_defining_uses_never_type.rs:16:1
   |
LL | / fn boo() -> Foo {
LL | |     loop {}
LL | | }
   | |_^ expected `&'static str`, got `()`
   |
note: previous use here
  --> $DIR/different_defining_uses_never_type.rs:8:1
   |
LL | / fn foo() -> Foo {
LL | |     ""
LL | | }
   | |_^

error: aborting due to 2 previous errors

